--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -9,7 +9,7 @@ import Grid from '@/components/ui/Grid.astro'
 import ArticleList from '@/components/ui/ArticleList.astro'
 import { useTranslations, type Locale } from '@/i18n/translations'
 
-const { fullName, title, institute, research_areas } = profile
+const { fullName, research_areas } = profile
 const currentLocale = (Astro.currentLocale || 'es') as Locale
 const t = useTranslations(currentLocale)
 ---
@@ -19,9 +19,6 @@ const t = useTranslations(currentLocale)
 	<section class='flex items-center gap-12 border-b pb-12'>
 		<Hero
 			fullName={fullName}
-			title={title}
-			institute={institute}
-			profilePicture={ProfilePictures}
 		/>
 	</section>
 
