Add pages for references, work, and interesting facts
Also remove unnecessary pages

--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -6,6 +6,6 @@ const { fullName } = profile
 
 <footer class='footer footer-center bg-base-100 text-base-content px-4 py-8'>
 		<div class='flex flex-row items-center gap-2'>
-		 Made with <Icon name="material-symbols:coffee" /> and <Icon name="mdi:love" /> {new Date().getFullYear()}
+		 Made with <Icon name="material-symbols:coffee" /> and <Icon name="mdi:love" /> in {new Date().getFullYear()}
 		</div>
 </footer>
