--- a/src/components/ui/Navbar.astro
+++ b/src/components/ui/Navbar.astro
@@ -33,12 +33,15 @@ const localePath = currentLocale === 'es' ? '' : `/${currentLocale}`
 					<li>
                         <a href={`${template.base}${localePath}/life`} class='text-lg'>{t('nav.life')}</a>
 					</li>
-					<!-- <li>
-                        <a href={`${template.base}${localePath}/papers`} class='text-lg'>{t('nav.papers')}</a>
+					<li>
+                        <a href={`${template.base}${localePath}/work`} class='text-lg'>{t('nav.work')}</a>
 					</li>
 					<li>
-                        <a href={`${template.base}${localePath}/cv`} class='text-lg'>{t('nav.cv')}</a>
-                    </li> -->
+                        <a href={`${template.base}${localePath}/facts`} class='text-lg'>{t('nav.facts')}</a>
+                    </li>
+                    <li>
+                        <a href={`${template.base}${localePath}/references`} class='text-lg'>{t('nav.references')}</a>
+                    </li>
 				</ul>
 			</div>
 		</div>
