--- a/src/pages/es/references.astro
+++ b/src/pages/es/references.astro
@@ -5,10 +5,10 @@ import Layout from '@/layouts/Layout.astro'
 <Layout>
     <section class='mb-12'>
 		<h1 class='text-2xl font-bold mb-6 border-b pb-2'>
-		Work
+		Referencias y más información
 		</h1>
 		<p class='text-lg'>
-		This is a page of work
+		Esta es una página de referencias y más información
 		</p>
 	</section>
 </Layout>
