--- a/src/pages/es/work.astro
+++ b/src/pages/es/work.astro
@@ -5,10 +5,10 @@ import Layout from '@/layouts/Layout.astro'
 <Layout>
     <section class='mb-12'>
 		<h1 class='text-2xl font-bold mb-6 border-b pb-2'>
-		Work
+		La Obra
 		</h1>
 		<p class='text-lg'>
-		This is a page of work
+		Esta es una página de la obra
 		</p>
 	</section>
 </Layout>
