--- a/src/pages/facts.astro
+++ b/src/pages/facts.astro
@@ -3,12 +3,12 @@ import Layout from '@/layouts/Layout.astro'
 ---
 
 <Layout>
-    <section class='mb-12'>
+	<section class='mb-12'>
 		<h1 class='text-2xl font-bold mb-6 border-b pb-2'>
-		Work
+		Realidades interesantes
 		</h1>
 		<p class='text-lg'>
-		This is a page of work
+		Esta es una página de realidades interesantes
 		</p>
 	</section>
 </Layout>
