--- a/src/components/ui/Carousel.astro
+++ b/src/components/ui/Carousel.astro
@@ -1,38 +1,53 @@
-<div class="carousel w-full">
-  <div id="slide1" class="carousel-item relative w-full">
-    <img
-      src="https://img.daisyui.com/images/stock/photo-1625726411847-8cbb60cc71e6.webp"
-      class="w-full" />
-    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-      <a href="#slide4" class="btn btn-circle">❮</a>
-      <a href="#slide2" class="btn btn-circle">❯</a>
-    </div>
-  </div>
-  <div id="slide2" class="carousel-item relative w-full">
-    <img
-      src="https://img.daisyui.com/images/stock/photo-1609621838510-5ad474b7d25d.webp"
-      class="w-full" />
-    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-      <a href="#slide1" class="btn btn-circle">❮</a>
-      <a href="#slide3" class="btn btn-circle">❯</a>
-    </div>
-  </div>
-  <div id="slide3" class="carousel-item relative w-full">
-    <img
-      src="https://img.daisyui.com/images/stock/photo-1414694762283-acccc27bca85.webp"
-      class="w-full" />
-    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-      <a href="#slide2" class="btn btn-circle">❮</a>
-      <a href="#slide4" class="btn btn-circle">❯</a>
-    </div>
-  </div>
-  <div id="slide4" class="carousel-item relative w-full">
-    <img
-      src="https://img.daisyui.com/images/stock/photo-1665553365602-b2fb8e5d1707.webp"
-      class="w-full" />
-    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-      <a href="#slide3" class="btn btn-circle">❮</a>
-      <a href="#slide1" class="btn btn-circle">❯</a>
-    </div>
-  </div>
+---
+import { Image } from 'astro:assets'
+import type { ImageMetadata } from 'astro'
+
+interface Props {
+  images: ImageMetadata[]
+  height?: string
+  showControls?: boolean
+  alt?: string
+}
+
+const { images, height = '500px', showControls = true, alt = 'Carousel image' } = Astro.props
+
+// If no images provided, don't render
+if (!images || images.length === 0) {
+  return null
+}
+---
+
+<div class="carousel w-full" style={`height: ${height}`}>
+  {images.map((image, index) => {
+    const slideId = `slide${index + 1}`
+    const prevSlideId = index === 0 ? `slide${images.length}` : `slide${index}`
+    const nextSlideId = index === images.length - 1 ? `slide1` : `slide${index + 2}`
+
+    return (
+      <div id={slideId} class="carousel-item relative w-full">
+        <Image
+          src={image}
+          alt={`${alt} ${index + 1}`}
+          class="w-full h-full object-contain"
+          loading={index === 0 ? 'eager' : 'lazy'}
+        />
+        {showControls && images.length > 1 && (
+          <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+            <a href={`#${prevSlideId}`} class="btn btn-circle">❮</a>
+            <a href={`#${nextSlideId}`} class="btn btn-circle">❯</a>
+          </div>
+        )}
+      </div>
+    )
+  })}
 </div>
+
+{images.length > 1 && (
+  <div class="flex w-full justify-center gap-2 py-2">
+    {images.map((_, index) => (
+      <a href={`#slide${index + 1}`} class="btn btn-xs">
+        {index + 1}
+      </a>
+    ))}
+  </div>
+)}
