Update index pages to comment out unnecessary sections

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -22,12 +22,12 @@ const cvData = getCvTranslations(currentLocale)
 	</section>
 
 	<!-- Research Areas -->
-	<section class='py-12 border-b'>
+	<!-- <section class='py-12 border-b'>
 		<Grid gridTitle={t('home.researchAreas')} gridItems={research_areas} />
-	</section>
+	</section> -->
 
 	<!-- Recent Publications -->
-	<section class='py-12 border-t'>
+	<!-- <section class='py-12 border-t'>
 		<ArticleList listTitle={t('home.recentPublications')} listItems={cvData.publications} />
-	</section>
+	</section> -->
 </Layout>
