Update carousel, start stubbing out references page, embed pptx

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -30,4 +30,10 @@ const cvData = getCvTranslations(currentLocale)
 	<!-- <section class='py-12 border-t'>
 		<ArticleList listTitle={t('home.recentPublications')} listItems={cvData.publications} />
 	</section> -->
+ <section>
+    <h2 class='text-2xl font-bold mb-6 border-b pb-2'>
+        Presentation
+        </h2>
+    <iframe src="https://1drv.ms/p/c/69caa13ad4e5ca71/IQTl4CQq63QMSK1jrCZObJQMASAB0YO86vvOZ8VPsCYcgiw?em=2&amp;wdAr=1.7777777777777777&amp;wdEaaCheck=1" width="600px" height="380px" frameborder="0"></iframe>
+</section>
 </Layout>
