--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,12 @@ const cvData = getCvTranslations(currentLocale)
 	<!-- <section class='py-12 border-b'>
 		<Grid gridTitle={t('home.researchAreas')} gridItems={research_areas} />
 	</section> -->
-
+   <section>
+       <h2 class='text-2xl font-bold mb-6 border-b pb-2'>
+		Presentation
+		</h2>
+		<iframe src="https://1drv.ms/p/c/69caa13ad4e5ca71/IQTl4CQq63QMSK1jrCZObJQMASAB0YO86vvOZ8VPsCYcgiw?em=2&amp;wdAr=1.7777777777777777&amp;wdEaaCheck=1" width="600px" height="380px" frameborder="0"></iframe>
+   </section>
 	<!-- Recent Publications -->
 	<!-- <section class='py-12 border-t'>
 		<ArticleList listTitle={t('home.recentPublications')} listItems={cvData.publications} />
